--- a/simulation/web/2D/heatequation.html
+++ b/simulation/web/2D/heatequation.html
@@ -6,9 +6,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <div id="header">
-    <h1>2D Heat Equation Simulation (const. P)</h1>
-  </div>
   <div id="simulationWrapper">
     <div id="canvasWrapper">
       <canvas id="canvas" width="300" height="300"></canvas>
@@ -24,11 +21,12 @@
         <button id="restartButton"><i class="fas fa-undo-alt"></i></button>
         <button id="playPauseButton"><i class="fas fa-play"></i></button>
       </div>
-      <div><label>Power (W): </label><input type="number" id="circle_power" value="100"></div>
+      <div><label>T0 (circle) (°C): </label><input type="number" id="T0Circle" value="1000"></div>
       <div><label>T0 (plate) (°C): </label><input type="number" id="T0Rest" value="25"></div>
-      <div><label>circle size: </label><input type="number" id="circleRadius" value="0.25" step="0.01"></div>
+      <div><label>circle size: </label><input type="number" id="circleRadius" value="0.1" step="0.01"></div>
       <div><label>time step (s): </label><input type="number" id="t_stepSize" value="0.1" step="0.01"></div>
-      <div><label>thermal diffusivity: </label><input type="number" id="thermalDiffusivity" value="1"></div>
+      <div><label>thermal diffusivity: </label><input type="number" id="thermalDiffusivity" value="0.1"></div>
+      
     </div>
     <div id="scaleWrapper"></div>
   </div>
